--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -85,6 +85,15 @@ table {
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'OpenSans-Bold';
+  src: url('../fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/OpenSans-Bold.woff') format('woff'),
+       url('../fonts/OpenSans-Bold.ttf')  format('truetype'),
+       url('../fonts/OpenSans-Bold.svg#OpenSans-Bold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
 /*================================================ My styles =========================================================*/
 body {
@@ -141,8 +150,36 @@ header {
   }
   .social-btns {
     float: right;
+    padding: 22px 35px 22px 0;
     .list-item {
       display: inline-block;
+      .item-link {
+        position: relative;
+        display: block;
+        margin-left: 7px;
+        width: 32px;
+        height: 32px;
+        color: #414146;
+        font: normal normal normal 19px/1 FontAwesome;
+        border-radius: 50%;
+        background-color: #777;
+      }
+      .facebook-link {
+        &:after {
+          content: '\f09a';
+          position: absolute;
+          top: 8px;
+          left: 10px;
+        }
+      }
+      .linkedin-link {
+        &:after {
+          content: '\f0e1';
+          position: absolute;
+          top: 6px;
+          left: 8px;
+        }
+      }
     }
   }
 }
@@ -157,6 +194,11 @@ header {
 .select2-container--default .select2-selection--multiple .select2-selection__rendered li {
   font-family: 'OpenSans', sans-serif;
 } /* select font color and style */
+.profile-page {
+  .container {
+    padding: 0;
+  }
+}
 main {
   margin-bottom: 100px;
   .container {
@@ -252,6 +294,123 @@ main {
       img {
         width: 100%;
       }
+    }
+  }
+  .profile-content {
+    padding: 40px 35px;
+    background-color: #fff;
+    .main-info {
+      padding-bottom: 40px;
+      border-bottom: 20px solid whitesmoke;
+      &:after {
+        visibility: hidden;
+        display: block;
+        font-size: 0;
+        content: " ";
+        clear: both;
+        height: 0;
+      }
+    }
+    .info-folio,
+    .info-about {
+      float: left;
+      width: 50%;
+    }
+    .info-title {
+      margin-bottom: 40px;
+      color: black;
+      font: 25px / 26px 'OpenSans', sans-serif;
+      text-transform: uppercase;
+      .title-yellow {
+        color: #ffd600;
+        font: 25px / 35px 'OpenSans', sans-serif;
+      }
+    }
+  }
+  .trololo {
+    color: #515a5f;
+    a,
+    th,
+    td {
+      color: #515a5f;
+      text-align: left;
+      font: 16px / 26px 'OpenSans', sans-serif;
+    }
+    th {
+      padding-right: 45px;
+      font-family: 'OpenSans-Bold', sans-serif;
+    }
+  }
+  /* Slick Slider */
+  .folio-slider {
+    position: relative;
+    .slick-arrow {
+      position: absolute;
+      z-index: 1;
+      width: 30px;
+      height: 30px;
+      color: #fff;
+      background-color: #ffd600;
+      font-size: 0;
+      border: none;
+    }
+    .slick-prev {
+      bottom: 10px;
+      left: 10px;
+      &:before {
+        content: '\f104';
+        position: absolute;
+        top: 6px;
+        left: 13px;
+        font: normal normal normal 19px/1 FontAwesome;
+      }
+    }
+    .slick-next {
+      bottom: 10px;
+      left: 45px;
+      &:before {
+        content: '\f105';
+        position: absolute;
+        top: 6px;
+        left: 13px;
+        font: normal normal normal 19px/1 FontAwesome;
+      }
+    }
+  }
+  .slick-slide {
+    img {
+      width: 100%;
+    }
+  }
+  /* Tabs */
+  .horizontal {
+    display: flex;
+    justify-content: space-around;
+    li {
+      width: 30%;
+      display: inline-block;
+    }
+    a {
+      color: #515a5f;
+    }
+    .tab-title {
+      text-align: center;
+      color: #515a5f;
+      font: 30px / 63px 'BebasNeueBold', 'OpenSans-Bold', sans-serif;
+      text-transform: uppercase;
+    }
+    .tab-img {
+      width: 110px;
+      height: 110px;
+    }
+    .tab-1 {
+      background: url('../images/achiev.png');
+    }
+    .tab-2 {
+      background: url('../images/hobby.png');
+    }
+    .tab-3 {
+      background: url('../images/portfolio.png');
     }
   }
 }
