--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -543,6 +543,7 @@ footer {
         background-color: #ffd600;
         &:hover {
           cursor: pointer;
+          background-color: #ffc40d;
         }
         &:after {
           content: '\f106';
