--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -179,6 +179,10 @@ header {
         font: normal normal normal 19px/1 FontAwesome;
         border-radius: 50%;
         background-color: #777;
+        &:hover {
+          color: #777;
+          background-color: #ffd600;
+        }
       }
       .facebook-link {
         &:after {
