--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -245,6 +245,18 @@ header {
   .container {
     padding: 0;
   }
+  .tags{
+    padding: 20px 0;
+    .tag{
+      color: #515a5f;
+      letter-spacing: 1px;
+      -webkit-border-radius: 20px;
+      -moz-border-radius: 20px;
+      border-radius: 20px;
+      padding: 5px;
+      background-color: #ffd600;
+    }
+  }
 }
 main {
   margin-bottom: 20px;
@@ -640,6 +652,8 @@ footer {
     }
   }
 }
+
+.clearfix{clear: both;}
 
 #loading{
   background-image: url('../images/loading.gif');
