--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -574,8 +574,7 @@ main {
   .login-form{
     background-color: #fff;
     margin:0 auto;
-    width:50%;
-    padding:20px;
+    padding:20px 25%;
     *{
       font-size: 30px;
       height:40px;
@@ -589,10 +588,12 @@ main {
 
     input{
       color: #414146;
-
       display:block;
       width:100%;
       border-width: 0px;
+      &.bottom-border{
+        border-bottom: 1px solid #414146;
+      }
     }
     input[type=button]{
       background-color: #ffd600;
@@ -665,4 +666,14 @@ footer {
   width:100%;
   height:100%;
   opacity: 0.9;
+}
+
+ul#menu{
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  text-align: right;
+  li a{
+    color:#fff;
+  }
 }
