--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -376,9 +376,9 @@ main {
       max-height: 190px;
       overflow: hidden;
       &:hover img {
-        -moz-transform: scale(1.1);
-        -webkit-transform: scale(1.1);
-        transform: scale(1.1);
+        -moz-transform: translateZ(0) scale(1.1);
+        -webkit-transform: translateZ(0) scale(1.1);
+        transform: translateZ(0) scale(1.1);
       }
       img {
         width: 100%;
